--- a/angular.json
+++ b/angular.json
@@ -20,6 +20,10 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
             "assets": [
+              "src/favicon.ico",
+              "src/assets",
+              "src/firebase-messaging-sw.js",
+              "src/manifest.webmanifest",
               {
                 "glob": "**/*",
                 "input": "src/assets",
@@ -101,6 +105,10 @@
             "styles": [],
             "scripts": [],
             "assets": [
+              "src/favicon.ico",
+              "src/assets",
+              "src/firebase-messaging-sw.js",
+              "src/manifest.webmanifest",
               {
                 "glob": "favicon.ico",
                 "input": "src/",
